--- a/BlessingsVanir/BlessingsVanir.csproj
+++ b/BlessingsVanir/BlessingsVanir.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Assets\Translations\English\dictionary.english.json" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +100,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Package\icon.png" />
+    <None Include="Assets\Resources\vanirbuff.png" />
+    <None Include="Assets\Resources\vanirelitebuff.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="JotunnPostBuildTaskWin" Condition="'$(OS)' == 'Windows_NT'">
