--- a/BlessingsVanir/BlessingsVanir.csproj
+++ b/BlessingsVanir/BlessingsVanir.csproj
@@ -82,9 +82,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configs\BaseConfig.cs" />
     <Compile Include="Properties\IgnoreAccessModifiers.cs" />
     <Compile Include="BlessingsVanir.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubClasses\CustomSE_StatsWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
